# lexiniana-paper

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  run_all.sh
.github/workflows/: ci.yml  docs.yml
crates/l4-cli/: Cargo.toml
crates/l4-cli/src/: main.rs
crates/l4-core/: Cargo.toml
crates/l4-core/src/: lib.rs
lexicons/L4_validation/tests/: l1_terms.json  l2_outputs.json  l2_slots.json  l3_contract.json
metrics/: delta_sem.csv
paper/: Matematica_Lexiniana_Paper.md
scripts/: plot_semantic_evolution.py
