[package]
name = "l4-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
l4-core = { path = "../l4-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["clock", "std"] }

# garante que é um binário com main.rs
[[bin]]
name = "l4-cli"
path = "src/main.rs"
